// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`respects a smaller first 1`] = `
Object {
  "edges": Array [
    Object {
      "cursor": "YXJyYXljb25uZWN0aW9uOjA=",
      "node": "A",
    },
    Object {
      "cursor": "YXJyYXljb25uZWN0aW9uOjE=",
      "node": "B",
    },
  ],
  "pageInfo": Object {
    "endCursor": "YXJyYXljb25uZWN0aW9uOjE=",
    "hasNextPage": true,
    "hasPreviousPage": false,
    "startCursor": "YXJyYXljb25uZWN0aW9uOjA=",
  },
}
`;

exports[`respects a smaller last 1`] = `
Object {
  "edges": Array [
    Object {
      "cursor": "YXJyYXljb25uZWN0aW9uOjM=",
      "node": "D",
    },
    Object {
      "cursor": "YXJyYXljb25uZWN0aW9uOjQ=",
      "node": "E",
    },
  ],
  "pageInfo": Object {
    "endCursor": "YXJyYXljb25uZWN0aW9uOjQ=",
    "hasNextPage": false,
    "hasPreviousPage": true,
    "startCursor": "YXJyYXljb25uZWN0aW9uOjM=",
  },
}
`;

exports[`respects an overly large first 1`] = `
Object {
  "edges": Array [
    Object {
      "cursor": "YXJyYXljb25uZWN0aW9uOjA=",
      "node": "A",
    },
    Object {
      "cursor": "YXJyYXljb25uZWN0aW9uOjE=",
      "node": "B",
    },
    Object {
      "cursor": "YXJyYXljb25uZWN0aW9uOjI=",
      "node": "C",
    },
    Object {
      "cursor": "YXJyYXljb25uZWN0aW9uOjM=",
      "node": "D",
    },
    Object {
      "cursor": "YXJyYXljb25uZWN0aW9uOjQ=",
      "node": "E",
    },
  ],
  "pageInfo": Object {
    "endCursor": "YXJyYXljb25uZWN0aW9uOjQ=",
    "hasNextPage": false,
    "hasPreviousPage": false,
    "startCursor": "YXJyYXljb25uZWN0aW9uOjA=",
  },
}
`;

exports[`respects an overly large last 1`] = `
Object {
  "edges": Array [
    Object {
      "cursor": "YXJyYXljb25uZWN0aW9uOjA=",
      "node": "A",
    },
    Object {
      "cursor": "YXJyYXljb25uZWN0aW9uOjE=",
      "node": "B",
    },
    Object {
      "cursor": "YXJyYXljb25uZWN0aW9uOjI=",
      "node": "C",
    },
    Object {
      "cursor": "YXJyYXljb25uZWN0aW9uOjM=",
      "node": "D",
    },
    Object {
      "cursor": "YXJyYXljb25uZWN0aW9uOjQ=",
      "node": "E",
    },
  ],
  "pageInfo": Object {
    "endCursor": "YXJyYXljb25uZWN0aW9uOjQ=",
    "hasNextPage": false,
    "hasPreviousPage": false,
    "startCursor": "YXJyYXljb25uZWN0aW9uOjA=",
  },
}
`;

exports[`respects first and after 1`] = `
Object {
  "edges": Array [
    Object {
      "cursor": "YXJyYXljb25uZWN0aW9uOjI=",
      "node": "C",
    },
    Object {
      "cursor": "YXJyYXljb25uZWN0aW9uOjM=",
      "node": "D",
    },
  ],
  "pageInfo": Object {
    "endCursor": "YXJyYXljb25uZWN0aW9uOjM=",
    "hasNextPage": true,
    "hasPreviousPage": true,
    "startCursor": "YXJyYXljb25uZWN0aW9uOjI=",
  },
}
`;

exports[`respects first and after and before, exactly right 1`] = `
Object {
  "edges": Array [
    Object {
      "cursor": "YXJyYXljb25uZWN0aW9uOjE=",
      "node": "B",
    },
    Object {
      "cursor": "YXJyYXljb25uZWN0aW9uOjI=",
      "node": "C",
    },
    Object {
      "cursor": "YXJyYXljb25uZWN0aW9uOjM=",
      "node": "D",
    },
  ],
  "pageInfo": Object {
    "endCursor": "YXJyYXljb25uZWN0aW9uOjM=",
    "hasNextPage": true,
    "hasPreviousPage": true,
    "startCursor": "YXJyYXljb25uZWN0aW9uOjE=",
  },
}
`;

exports[`respects first and after and before, too few 1`] = `
Object {
  "edges": Array [
    Object {
      "cursor": "YXJyYXljb25uZWN0aW9uOjE=",
      "node": "B",
    },
    Object {
      "cursor": "YXJyYXljb25uZWN0aW9uOjI=",
      "node": "C",
    },
  ],
  "pageInfo": Object {
    "endCursor": "YXJyYXljb25uZWN0aW9uOjI=",
    "hasNextPage": true,
    "hasPreviousPage": true,
    "startCursor": "YXJyYXljb25uZWN0aW9uOjE=",
  },
}
`;

exports[`respects first and after and before, too many 1`] = `
Object {
  "edges": Array [
    Object {
      "cursor": "YXJyYXljb25uZWN0aW9uOjE=",
      "node": "B",
    },
    Object {
      "cursor": "YXJyYXljb25uZWN0aW9uOjI=",
      "node": "C",
    },
    Object {
      "cursor": "YXJyYXljb25uZWN0aW9uOjM=",
      "node": "D",
    },
  ],
  "pageInfo": Object {
    "endCursor": "YXJyYXljb25uZWN0aW9uOjM=",
    "hasNextPage": true,
    "hasPreviousPage": true,
    "startCursor": "YXJyYXljb25uZWN0aW9uOjE=",
  },
}
`;

exports[`respects first and after with long first 1`] = `
Object {
  "edges": Array [
    Object {
      "cursor": "YXJyYXljb25uZWN0aW9uOjI=",
      "node": "C",
    },
    Object {
      "cursor": "YXJyYXljb25uZWN0aW9uOjM=",
      "node": "D",
    },
    Object {
      "cursor": "YXJyYXljb25uZWN0aW9uOjQ=",
      "node": "E",
    },
  ],
  "pageInfo": Object {
    "endCursor": "YXJyYXljb25uZWN0aW9uOjQ=",
    "hasNextPage": false,
    "hasPreviousPage": true,
    "startCursor": "YXJyYXljb25uZWN0aW9uOjI=",
  },
}
`;

exports[`respects last and after and before, exactly right 1`] = `
Object {
  "edges": Array [
    Object {
      "cursor": "YXJyYXljb25uZWN0aW9uOjE=",
      "node": "B",
    },
    Object {
      "cursor": "YXJyYXljb25uZWN0aW9uOjI=",
      "node": "C",
    },
    Object {
      "cursor": "YXJyYXljb25uZWN0aW9uOjM=",
      "node": "D",
    },
  ],
  "pageInfo": Object {
    "endCursor": "YXJyYXljb25uZWN0aW9uOjM=",
    "hasNextPage": true,
    "hasPreviousPage": true,
    "startCursor": "YXJyYXljb25uZWN0aW9uOjE=",
  },
}
`;

exports[`respects last and after and before, too few 1`] = `
Object {
  "edges": Array [
    Object {
      "cursor": "YXJyYXljb25uZWN0aW9uOjI=",
      "node": "C",
    },
    Object {
      "cursor": "YXJyYXljb25uZWN0aW9uOjM=",
      "node": "D",
    },
  ],
  "pageInfo": Object {
    "endCursor": "YXJyYXljb25uZWN0aW9uOjM=",
    "hasNextPage": true,
    "hasPreviousPage": true,
    "startCursor": "YXJyYXljb25uZWN0aW9uOjI=",
  },
}
`;

exports[`respects last and after and before, too many 1`] = `
Object {
  "edges": Array [
    Object {
      "cursor": "YXJyYXljb25uZWN0aW9uOjE=",
      "node": "B",
    },
    Object {
      "cursor": "YXJyYXljb25uZWN0aW9uOjI=",
      "node": "C",
    },
    Object {
      "cursor": "YXJyYXljb25uZWN0aW9uOjM=",
      "node": "D",
    },
  ],
  "pageInfo": Object {
    "endCursor": "YXJyYXljb25uZWN0aW9uOjM=",
    "hasNextPage": true,
    "hasPreviousPage": true,
    "startCursor": "YXJyYXljb25uZWN0aW9uOjE=",
  },
}
`;

exports[`respects last and before 1`] = `
Object {
  "edges": Array [
    Object {
      "cursor": "YXJyYXljb25uZWN0aW9uOjE=",
      "node": "B",
    },
    Object {
      "cursor": "YXJyYXljb25uZWN0aW9uOjI=",
      "node": "C",
    },
  ],
  "pageInfo": Object {
    "endCursor": "YXJyYXljb25uZWN0aW9uOjI=",
    "hasNextPage": true,
    "hasPreviousPage": true,
    "startCursor": "YXJyYXljb25uZWN0aW9uOjE=",
  },
}
`;

exports[`respects last and before with long last 1`] = `
Object {
  "edges": Array [
    Object {
      "cursor": "YXJyYXljb25uZWN0aW9uOjA=",
      "node": "A",
    },
    Object {
      "cursor": "YXJyYXljb25uZWN0aW9uOjE=",
      "node": "B",
    },
    Object {
      "cursor": "YXJyYXljb25uZWN0aW9uOjI=",
      "node": "C",
    },
  ],
  "pageInfo": Object {
    "endCursor": "YXJyYXljb25uZWN0aW9uOjI=",
    "hasNextPage": true,
    "hasPreviousPage": false,
    "startCursor": "YXJyYXljb25uZWN0aW9uOjA=",
  },
}
`;

exports[`returns all elements if cursors are invalid 1`] = `
Object {
  "edges": Array [
    Object {
      "cursor": "YXJyYXljb25uZWN0aW9uOjA=",
      "node": "A",
    },
    Object {
      "cursor": "YXJyYXljb25uZWN0aW9uOjE=",
      "node": "B",
    },
    Object {
      "cursor": "YXJyYXljb25uZWN0aW9uOjI=",
      "node": "C",
    },
    Object {
      "cursor": "YXJyYXljb25uZWN0aW9uOjM=",
      "node": "D",
    },
    Object {
      "cursor": "YXJyYXljb25uZWN0aW9uOjQ=",
      "node": "E",
    },
  ],
  "pageInfo": Object {
    "endCursor": "YXJyYXljb25uZWN0aW9uOjQ=",
    "hasNextPage": false,
    "hasPreviousPage": false,
    "startCursor": "YXJyYXljb25uZWN0aW9uOjA=",
  },
}
`;

exports[`returns all elements if cursors are on the outside 1`] = `
Object {
  "edges": Array [
    Object {
      "cursor": "YXJyYXljb25uZWN0aW9uOjA=",
      "node": "A",
    },
    Object {
      "cursor": "YXJyYXljb25uZWN0aW9uOjE=",
      "node": "B",
    },
    Object {
      "cursor": "YXJyYXljb25uZWN0aW9uOjI=",
      "node": "C",
    },
    Object {
      "cursor": "YXJyYXljb25uZWN0aW9uOjM=",
      "node": "D",
    },
    Object {
      "cursor": "YXJyYXljb25uZWN0aW9uOjQ=",
      "node": "E",
    },
  ],
  "pageInfo": Object {
    "endCursor": "YXJyYXljb25uZWN0aW9uOjQ=",
    "hasNextPage": false,
    "hasPreviousPage": false,
    "startCursor": "YXJyYXljb25uZWN0aW9uOjA=",
  },
}
`;

exports[`returns all elements without filters 1`] = `
Object {
  "edges": Array [
    Object {
      "cursor": "YXJyYXljb25uZWN0aW9uOjA=",
      "node": "A",
    },
    Object {
      "cursor": "YXJyYXljb25uZWN0aW9uOjE=",
      "node": "B",
    },
    Object {
      "cursor": "YXJyYXljb25uZWN0aW9uOjI=",
      "node": "C",
    },
    Object {
      "cursor": "YXJyYXljb25uZWN0aW9uOjM=",
      "node": "D",
    },
    Object {
      "cursor": "YXJyYXljb25uZWN0aW9uOjQ=",
      "node": "E",
    },
  ],
  "pageInfo": Object {
    "endCursor": "YXJyYXljb25uZWN0aW9uOjQ=",
    "hasNextPage": false,
    "hasPreviousPage": false,
    "startCursor": "YXJyYXljb25uZWN0aW9uOjA=",
  },
}
`;

exports[`returns no elements if cursors cross 1`] = `
Object {
  "edges": Array [],
  "pageInfo": Object {
    "endCursor": null,
    "hasNextPage": false,
    "hasPreviousPage": false,
    "startCursor": null,
  },
}
`;
